--- a/src/Components/StatusPost/StatusePost.css
+++ b/src/Components/StatusPost/StatusePost.css
@@ -3,3 +3,15 @@
   padding: 8px 10px;
   border-radius: 50px;
 } */
+
+.status-post-btn{
+  background-color: lightgreen;
+  padding: 5px 10px;
+  margin-left: 10px;
+}
+
+.status-modal-btn{
+  background-color: lightgreen;
+  padding: 5px 10px;
+  margin-left: 10px;
+}
