--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,4 +1,9 @@
 .cover-photo{
-  height: 40vh;
+  height: 30vh;
   width: 100%;
 }
+
+/* .background-modal{
+  background-color: darkcyan;
+  padding: 5;
+} */
