--- a/src/Components/StatusPost/StatusePost.css
+++ b/src/Components/StatusPost/StatusePost.css
@@ -20,3 +20,15 @@
   font-size: 50px;
   color: blueviolet;
 }
+
+.fa-face-smile{
+  color: blue;
+}
+
+.fa-podcast{
+  color: red;
+}
+
+.fa-image{
+  color: goldenrod;
+}
