--- a/src/Components/StatusPost/StatusePost.css
+++ b/src/Components/StatusPost/StatusePost.css
@@ -23,13 +23,13 @@
 }
 
 .fa-face-smile{
-  color: blue;
+  color: indigo;
 }
 
 .fa-podcast{
-  color: red;
+  color: indigo;
 }
 
 .fa-image{
-  color: goldenrod;
+  color: indigo;
 }
